[package]
name = "stereokit-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["model-draw-system"]
model-draw-system = []


[dependencies]
stereokit = { path = "../stereokit-rs", features = ["bevy_ecs"]}
glam = { version = "0.23.0", features = ["mint"] }
bevy_app = "0.10.1"
bevy_ecs = "0.10.1"
bevy_transform = "0.10.1"